<resources>
    <string name="app_name">Water hub</string>
    <string name="button_generate_qrcode">generate</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="water_hub_title">Water Hub</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">E-mail</string>
    <string name="birthdate_hint">Birthdate (DD/MM/YYYY)</string>
    <string name="birthdate_simple_hint">Birthdate</string>
    <string name="gender_hint">Gender</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Re-enter Password</string>
    <string name="title_activity_home_navigation_drawer">HomeNavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">waterhub</string>
    <string name="nav_header_subtitle">lorem ipsum</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="phone_hint">Phone</string>
    <string name="choose_your_order">Choose Your Water</string>
    <string name="cold_water">Cold</string>
    <string name="normal_water">Normal</string>
    <string name="Tumbler">Tumbler</string>

    <string name="label_register">Signup</string>

    <string name="label_login">Sign In</string>
    <string name="label_barcode">Barcode Anda</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="btn_edit_label">Edit</string>
    <string name="re_password_hint">Re Enter Password</string>
    <string name="about_us">About Us</string>
    <string name="welcome">Welcome,</string>
    <string name="lets_change">Lets Change</string>
    <string name="Cancel">cancel</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="selamat_datang_di_water_hub">Selamat datang di Water Hub</string>


    <string name="kalau_ada_yang_gratis_ngapain_bayar">kalau ada yang gratis ngapain bayar ?</string>
    <string name="refillaja">#Refillaja</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="welcome_back_sign_in_to_continue">Welcome back, sign in to continue</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password_salah">Wrong Password !</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="create_an_account_to_start">Create an account to start</string>
    <string name="mm_dd_yy">mm/dd/yy</string>
    <string name="login">Login</string>
    <string name="have_account">Have Account?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="scan_qr_to_machine">Scan QR To Machine</string>
    <string name="done">Done</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="no">No</string>
    <string name="hi">Hi,</string>
    <string name="abdullah">Abdullah</string>

</resources>
