<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <LinearLayout
        android:id="@+id/containerInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="4dp"
            android:text="@string/email_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/email_hint"
            android:textSize="16dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="4dp"
            android:text="@string/full_name_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/fieldFullname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_hint"
            android:textSize="16dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="4dp"
            android:text="@string/phone_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/fieldPhone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textSize="16dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="4dp"
            android:text="@string/birthdate_simple_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/fieldBirthDate"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/birthdate_hint"
            android:inputType="date"
            android:textSize="16dp" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="4dp"
            android:text="@string/gender_hint"
            android:textColor="@color/colorPrimary"
            android:textSize="18dp" />

        <RadioGroup
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/rdiMaleProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male" />

            <RadioButton
                android:id="@+id/rdiFemaleProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="Female" />

        </RadioGroup>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/linearEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/linearEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/containerInputField"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_primary_dark"
            android:text="@string/btn_edit_label"
            android:textColor="@android:color/white"
            android:layout_margin="15dp"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_rounded_primary_dark"
            android:text="@string/Cancel"
            android:textColor="@android:color/white"
            android:layout_margin="15dp"/>


    </LinearLayout>

</RelativeLayout>