<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <TextView
        android:id="@+id/waterHubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water_hub_title"
        android:textSize="24dp"
        android:textColor="@color/colorPrimary"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/signButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/waterHubTitle"
        android:layout_marginTop="36dp"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:background="@drawable/btn_rounded_primary_dark"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signButton"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:background="@drawable/btn_rounded_primary_light"/>

</RelativeLayout>