<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">


    <TextView
        android:id="@+id/waterHubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/containerInputField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"

        android:textColor="@color/colorPrimary"
        android:textSize="24dp" />

    <ScrollView
        android:id="@+id/containerInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/fieldFullname"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/full_name_hint"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                />

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:inputType="textEmailAddress"
                />


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <TextView
                    android:id="@+id/txt_country"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+62 "
                    android:textSize="15dp"
                    android:layout_marginRight="10dp"/>

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_weight="2"
                    android:id="@+id/fieldPhone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_hint"
                    android:inputType="phone|number|numberDecimal"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary" />
            </LinearLayout>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/fieldBirthDate"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/birthdate_hint"
                android:inputType="date"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary" />


            <RadioGroup
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/rdiMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/rdiFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Female" />

            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:textColorHint="@color/colorPrimary"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldPassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:textColorHint="@color/colorPrimary"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fieldRePassword"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_password_hint"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_rounded_primary_dark"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />



            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>