<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <com.daimajia.slider.library.SliderLayout
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/welcomeMessageTitle"
        android:layout_alignParentTop="true"

        android:layout_marginBottom="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_marginTop="5dp"
        android:textAlignment="center"
        app:autoPlaying="true"
        app:centerScale="1.6"
        app:itemSpace="0"
        app:moveSpeed="0.5"
        app:showIndicator="true"/>


            <TextView
                android:id="@+id/welcomeMessageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/orderTitle"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/welcome"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/orderOptionContainer"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/choose_your_order"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/orderOptionContainer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:id="@+id/coldWaterAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/coldWater"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/cold" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/normalWaterAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1">


                    <ImageView
                        android:id="@+id/normalWater"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/normal" />



                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/letsTile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/orderOptionContainer"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/lets_change"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/orderContainer"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/letsTile"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="2"

                >

                <RelativeLayout
                    android:id="@+id/tumblerAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/tumblerWater"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/tumbler" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/aboutUsAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/aboutUs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/about_us" />



                </RelativeLayout>

            </LinearLayout>



</RelativeLayout>